# SNN-Transformer-Knowlege-Extraction

./: .gitignore  SpikeGate_MaxFormer_Colab.ipynb  copy_images.py  dopamine_entropy_experiment.py  generate_comprehensive_report.py  probe_ckpt.py  probe_out.txt  pyproject.toml  qkv_sparsity_extractor.py  spike_simulation.py  test_gating_impact.json  test_gating_profile.json  test_head_importance.json  test_spikegate.py  visualize_model.ipynb  visualize_model.py
Analysis_Explanations/: future.txt
analysis_outputs/JSONs/: qkv_sparsity_profile.json
examples/: analyze_maxformer.py  generate_comprehensive_report.py
spikegate/: README.md  __init__.py  _version.py  attention.py  converter.py  evaluator.py  gating.py  neurons.py  policies.py  profiler.py  reporter.py
tests/: conftest.py  test_gating.py  test_integration.py  test_neurons.py  test_policies.py
